# trading_system_project

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PHASE_1_COMPLETION_REPORT.md  README.md  SETUP_COMPLETE.md  SYSTEM_STATUS.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd.yml  ci-cd.yml.disabled  ci.yml  dependency-updates.yml  release.yml  simple-ci.yml
config/: development.yaml
docker/: Dockerfile.trading-system  docker-compose.yml
docker/grafana/provisioning/datasources/: datasources.yml
docker/kafka/: server.properties
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml  trading_rules.yml
docker/timescaledb/: init.sql
docs/: KAFKA_KRAFT_SETUP.md
scripts/: health_check.sh  init_kafka_kraft.sh  setup_environment.sh
tests/: __init__.py  conftest.py
tests/unit/: test_strategy.py
trading_system/: __init__.py  main.py
trading_system/backtest/: __init__.py
trading_system/core/: __init__.py  strategy.py
trading_system/execution/: __init__.py
trading_system/monitoring/: __init__.py
trading_system/utils/: __init__.py  config.py  logger.py
